changing img extensions

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     
     <div id="parallax" class="parallax-section-head">
         <ul id="scene" class="scene">
-            <li class="layer" data-depth="1.00"><img src="img/layer1.png"></li>
-            <li class="layer" data-depth="0.80"><img src="img/layer2.png"></li>
-            <li class="layer" data-depth="0.60"><img src="img/layer3.png"></li>
+            <li class="layer" data-depth="1.00"><img src="img/layer1.jpg"></li>
+            <li class="layer" data-depth="0.80"><img src="img/layer2.jpg"></li>
+            <li class="layer" data-depth="0.60"><img src="img/layer3.jpg"></li>
         </ul>
     </div>
 
