--- a/index.html
+++ b/index.html
@@ -11,104 +11,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        
+
         <link rel="stylesheet" href="css/main.css">
         <script src="components/modernizr/modernizr.js"></script>
     </head>
     <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><span>Martín García</span> / Digital Crafter</a>
-
-        </div>      
-
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-    </nav>
-    
-    <div id="parallax" class="parallax-section-head">
-        <ul id="scene" class="scene">
-            <li class="layer" data-depth="1.00"><img src="img/layer1.jpg"></li>
-            <li class="layer" data-depth="0.80"><img src="img/layer2.jpg"></li>
-            <li class="layer" data-depth="0.60"><img src="img/layer3.jpg"></li>
-        </ul>
-    </div>
+    <img src="img/bg.jpg" class="bg">
 
     <div class="container main-container">
       <div class="row">
         <h1>Martín García</h1>
-        <p class="lead">Computer Engineer, Cafeine Based Lifeform, Nerd in disguise</p>
-        <p><a class="btn btn-lg btn-success" href="#" role="button">Download résumé</a></p>
+        <p class="lead">Computer Engineer, Audio Mad Scientist, Cafeine Based Lifeform</p>
       </div>
-
-      <div class="row marketing">
-        <div class="col-lg-4">
-          <h4>Code</h4>
-          <a href="https://github.com/psysonik">Github</a>
-
-          <h4>Graphics</h4>
-          <a href="http://www.behance.net/psysonik">Behance</a><br />
-          <a href="http://sonikvisual.deviantart.com/">Deviantart</a><br />
-          <a href="http://www.flickr.com/photos/69514712@N06/">Flickr</a><br />
-
-          <h4>Audio</h4>
-          <a href="https://soundcloud.com/maquinal">Soundcloud</a>          
-        </div>
-
-        <div class="col-lg-4">
-          <div class="alert alert-info">Coder tools</div>
-            <p><strong>Frontend <3</strong> Backbone, Requirejs, Javascript, CSS3, HTML5 <p>
-            <p><strong>Backend</strong> PHP, ASP.NET <p>
-
-          <div class="alert alert-info">Graphics Skills</div>
-          <h5>Photoshop</h5>
-          <h5>Illustrator</h5>
-          <h5>AfterEffects</h5>
-          <h5>Processing</h5>
-        </div>
-        <div class="col-lg-4">
-          <div class="alert alert-info">Languages</div>
-          <p>95% English</p>
-          <p>95% Spanish</p>
-          <p>70% French</p>
-          <p>50% German</p>
-
-          <div class="alert alert-info">Hobbies</div>
-          <p>Gym</p>
-          <p>Bicycle</p>          
-        </div>
-      </div>      
-
-      <div class="footer">
-        <p>&copy; Company 2013</p>
-      </div>
-
     </div> <!-- /container -->
 
     <div class="about-wrapper">
     <!--
-        <div class="container about-container">      
+        <div class="container about-container">
           <div class="row marketing">
             <div class="col-lg-4">
               <h4>Code</h4>
@@ -120,7 +39,7 @@
               <a href="http://www.flickr.com/photos/69514712@N06/">Flickr</a><br />
 
               <h4>Audio</h4>
-              <a href="https://soundcloud.com/maquinal">Soundcloud</a>          
+              <a href="https://soundcloud.com/maquinal">Soundcloud</a>
             </div>
 
             <div class="col-lg-4">
@@ -143,9 +62,9 @@
 
               <div class="alert alert-info">Hobbies</div>
               <p>Gym</p>
-              <p>Bicycle</p>          
+              <p>Bicycle</p>
             </div>
-          </div>      
+          </div>
 
           <div class="footer">
             <p>&copy; Company 2013</p>
@@ -157,7 +76,7 @@
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="components/parallax/deploy/parallax.js"></script>        
+        <script src="components/parallax/deploy/parallax.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
