adding social networks

--- a/index.html
+++ b/index.html
@@ -20,58 +20,28 @@
 
     <div class="container main-container">
       <div class="row">
-        <h1>Martín García</h1>
-        <p class="lead">Computer Engineer, Audio Mad Scientist, Cafeine Based Lifeform</p>
+        <h1 class="col-sm-5 col-md-4 col-md-offset-3 clearfix"><span class="name-wrap">Martin</span>
+        <span class="lastname-wrap">Garcia</span></h1>
+      </div>
+      <div class="row">
+        <p class="col-sm-5 col-sm-4 col-md-offset-3 tagline">Digital Crafter, Audio Mad Scientist, <br />Cafeine Based Lifeform</p>
       </div>
     </div> <!-- /container -->
 
-    <div class="about-wrapper">
-    <!--
-        <div class="container about-container">
-          <div class="row marketing">
-            <div class="col-lg-4">
-              <h4>Code</h4>
-              <a href="https://github.com/psysonik">Github</a>
-
-              <h4>Graphics</h4>
-              <a href="http://www.behance.net/psysonik">Behance</a><br />
-              <a href="http://sonikvisual.deviantart.com/">Deviantart</a><br />
-              <a href="http://www.flickr.com/photos/69514712@N06/">Flickr</a><br />
-
-              <h4>Audio</h4>
-              <a href="https://soundcloud.com/maquinal">Soundcloud</a>
-            </div>
-
-            <div class="col-lg-4">
-              <div class="alert alert-info">Coder tools</div>
-                <p><strong>Frontend <3</strong> Backbone, Requirejs, Javascript, CSS3, HTML5 <p>
-                <p><strong>Backend</strong> PHP, ASP.NET <p>
-
-              <div class="alert alert-info">Graphics Skills</div>
-              <h5>Photoshop</h5>
-              <h5>Illustrator</h5>
-              <h5>AfterEffects</h5>
-              <h5>Processing</h5>
-            </div>
-            <div class="col-lg-4">
-              <div class="alert alert-info">Languages</div>
-              <p>95% English</p>
-              <p>95% Spanish</p>
-              <p>70% French</p>
-              <p>50% German</p>
-
-              <div class="alert alert-info">Hobbies</div>
-              <p>Gym</p>
-              <p>Bicycle</p>
-            </div>
-          </div>
-
-          <div class="footer">
-            <p>&copy; Company 2013</p>
-          </div>
-        -->
-        </div> <!-- /container -->
+    <div class="about-wrapper container">
+      <div class="alert alert-info col-sm-6 col-sm-5 col-md-offset-2">
+        <a href="https://github.com/psysonik" id="github">Github</a>
+        <a href="http://www.behance.net/psysonik" id="behance">Behance</a>
+        <a href="http://www.flickr.com/photos/69514712@N06/" id="flickr">Flickr</a>
+        <a href="https://twitter.com/Cory_kraftstoff" id="twitter">Twitter</a>
+        <a href="https://www.facebook.com/martin.garcia.796569" id="facebook">Facebook</a>
+        <a href="https://soundcloud.com/maquinal" id="soundcloud">Soundcloud</a>
+        <a href="http://sonikvisual.deviantart.com" id="deviantart">Deviantart</a>
+        <a href="#" id="blog">Blog</a>
+        <a href="#" id="contact">Contact</a>
+      </div>
     </div>
+
 
 
 
