three js is in da house

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="https://twitter.com/Cory_kraftstoff" id="twitter">Twitter</a>
         <a href="https://www.facebook.com/martin.garcia.796569" id="facebook">Facebook</a>
         <a href="https://soundcloud.com/maquinal" id="soundcloud">Soundcloud</a>
-        <a href="http://sonikvisual.deviantart.com" id="deviantart">Deviantart</a>
+        <a href="http://sonikvisual.deviantart.com/gallery/" id="deviantart">Deviantart</a>
         <a href="#" id="blog">Blog</a>
         <a href="#" id="contact">Contact</a>
       </div>
@@ -46,7 +46,9 @@
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="components/parallax/deploy/parallax.js"></script>
+        <script src="components/threejs/build/three.min.js"></script>
+        <script src="js/OBJLoader.js"></script>
+        <script src="js/retractor.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
