--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Martín García - Code/Graphics/Audio</title>
-        <meta name="description" content="">
+        <meta name="description" content="Martín García - Computer Engineer, Digital Crafter, Audio Mad Scientist,
+Cafeine Based Lifeform">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -16,6 +17,7 @@
         <script src="components/modernizr/modernizr.js"></script>
     </head>
     <body>
+    <img src="http://th00.deviantart.net/fs71/200H/i/2012/089/9/6/abode_of_souls_by_sonikvisual-d4uh2yt.jpg" style="display:none">
     <img src="img/bg.jpg" class="bg">
 
     <div class="container main-container">
