updating blog url

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ Cafeine Based Lifeform">
         <a href="https://www.facebook.com/martin.garcia.796569" id="facebook">Facebook</a>
         <a href="https://soundcloud.com/maquinal" id="soundcloud">Soundcloud</a>
         <a href="http://sonikvisual.deviantart.com/gallery/" id="deviantart">Deviantart</a>
-        <a href="#" id="blog">Blog</a>
-        <a href="#" id="contact">Contact</a>
+        <a href="http://blog.mgarciat.com" id="blog">Blog</a>
+        <a href="http://blog.mgarciat.com/contact" id="contact">Contact</a>
       </div>
     </div>
 
@@ -51,6 +51,6 @@ Cafeine Based Lifeform">
         <script src="components/threejs/build/three.min.js"></script>
         <script src="js/OBJLoader.js"></script>
         <script src="js/retractor.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/particler.js"></script>
     </body>
 </html>
