Updating front page with new grafic projects

--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@ Cafeine Based Lifeform">
 		<!-- Carousel -->
 			<div class="carousel">
 				<div class="reel">
+					<article>
+						<a href="http://blog.mgarciat.com/maquinal-3d-audio-sync/" class="image featured"><img src="images/picaudio_sync.jpg" alt="" /></a>
+						<header>
+							<h3><a href="#">3D Audio Syncronization</a></h3>
+						</header>
+						<p>Sincronización de track con motiongraphics en Cinema 4D.</p>							
+					</article>
+
+					<article>
+						<a href="http://blog.mgarciat.com/processing-audio-sync/" class="image featured"><img src="images/processingaudio_sync.jpg" alt="" /></a>
+						<header>
+							<h3><a href="#">Processing 2D Audio Sync</a></h3>
+						</header>
+						<p>Sincronización de track con gráficos generativos en processing.</p>							
+					</article>
 
 					<article>
 						<a href="http://sonikvisual.deviantart.com/art/Mastering-Death-294918179" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
