--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@ Cafeine Based Lifeform">
 			<div class="carousel">
 				<div class="reel">
 					<article>
+						<a href="http://blog.mgarciat.com/maquinal-audio-sync-v2/" class="image featured"><img src="images/picaudio_sync2.jpg" alt="" /></a>
+						<header>
+							<h3><a href="#">Maquinal 3D Audio Syncronization V2</a></h3>
+						</header>
+						<p>Sincronización de track con motiongraphics en Cinema 4D.</p>							
+					</article>
+
+					<article>
 						<a href="http://blog.mgarciat.com/maquinal-3d-audio-sync/" class="image featured"><img src="images/picaudio_sync.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">3D Audio Syncronization</a></h3>
