--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ Cafeine Based Lifeform">
 					<article>
 						<a href="http://blog.mgarciat.com/maquinal-audio-sync-v2/" class="image featured"><img src="images/picaudio_sync2.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#">Maquinal 3D Audio Syncronization V2</a></h3>
+							<h3><a href="#">3D Audio Syncronization V2</a></h3>
 						</header>
-						<p>Sincronización de track con motiongraphics en Cinema 4D.</p>							
+						<p>Sincronización de track con motiongraphics en Cinema 4D.</p>
 					</article>
 
 					<article>
@@ -77,7 +77,7 @@ Cafeine Based Lifeform">
 						<header>
 							<h3><a href="#">3D Audio Syncronization</a></h3>
 						</header>
-						<p>Sincronización de track con motiongraphics en Cinema 4D.</p>							
+						<p>Sincronización de track con motiongraphics en Cinema 4D.</p>
 					</article>
 
 					<article>
