--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@ Cafeine Based Lifeform">
 			<div class="carousel">
 				<div class="reel">
 					<article>
+						<a class="image featured"><img src="images/decay_art2.jpg" alt="" /></a>
+						<header>
+							<h3><a href="#">Preconcept Motion Graphics Artwork 2</a></h3>
+						</header>
+						<p>Segundo concepto gráfico para Reel.</p>
+					</article>
+
+					<article>
+						<a class="image featured"><img src="images/decay_art.jpg" alt="" /></a>
+						<header>
+							<h3><a href="#">Preconcept Motion Graphics Artwork</a></h3>
+						</header>
+						<p>Primer concepto gráfico para Reel.</p>
+					</article>
+
+					<article>
 						<a href="http://blog.mgarciat.com/maquinal-audio-sync-v2/" class="image featured"><img src="images/picaudio_sync2.jpg" alt="" /></a>
 						<header>
 							<h3><a href="#">3D Audio Syncronization V2</a></h3>
