--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
-    <meta name="description" content="">
+    <meta name="description" content="Front End Developer - UI/UX Geek">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" value="Martín García, Front End Developer - UI/UX Geek">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Martín García" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://mgarciat.com/" />
+    <meta property="og:image" content="http://mgarciat.com/images/images/b3677e92.profile.jpg" />
+    <meta property="og:description" content="Front End Developer - UI/UX Geek" />
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <link rel="stylesheet" href="styles/b834316a.main.css">
