--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Martín García</title>
     <meta name="description" content="Front End Developer - UI/UX Geek">
 
     <!-- Twitter Card data -->
