--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <p class="tagline">Front End <span>Developer</span></p>
             <p class="tagline">UI/UX <span>Geek</span></p>
             <div class="clearfix"></div>
-            <p class="address">Living/Working in <span>Quintana Roo, Mexico</span></p>
           </header>
           <div class="clearfix"></div>
           <footer class="social">
@@ -93,7 +92,7 @@
         <div class="col-sm-12">
           <h2>Pro<span>file</span></h2>
           <p class="lead">
-            I’m a passionate Javascript Developer, currently living / working in Quintana Roo, Mexico. i have been involved in professional Web Development since 2011.
+            I’m a passionate Javascript Developer, i have been involved in professional Web Development since 2011.
           </p>
           <p class="lead">
           The areas i enjoy the most are Front-End development, (though, i sometimes make my own backends), Interaction, UI/UX, working with graphic assets and developing visual content & data architecture , mockups/prototypes.
