--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@
 		<title>Profuturo Test</title>
 		<meta name="description" content="test de maquetación profuturo">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<base href="http://mgarciat.com/test/" target="_blank">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="styles/ccdc9b5f.main.css">
