--- a/test/index.html
+++ b/test/index.html
@@ -9,16 +9,32 @@
 		<title>Profuturo Test</title>
 		<meta name="description" content="test de maquetación profuturo">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<base href="http://mgarciat.com/test/" target="_blank">
 		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
 		<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" href="styles/ccdc9b5f.main.css">
+		<link rel="stylesheet" href="styles/c34ebcf1.main.css">
 		<script src="scripts/vendor/7d72bbd1.modernizr.js"></script>
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+	    <!--[if lt IE 9]>
+	      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	    <![endif]-->
 	</head>
 	<body>
 		
@@ -41,7 +57,7 @@
 				<div class="container">
 					<div class="col-sm-12">
 						<div class="brand-logo">
-							<img src="/images/1a31e4c3.logo.png" alt="logo">
+							<img src="images/1a31e4c3.logo.png" alt="logo">
 						</div>
 						
 						<p class="lead intro text-center">
@@ -74,7 +90,7 @@
 						</div>
 	
 						<div class="image-holder col-sm-12">
-							<img src="/images/fe7c51e1.slider-01.jpg" class="img-responsive wow fadeInUp" alt="Image Profuturo">
+							<img src="images/fe7c51e1.slider-01.jpg" class="img-responsive wow fadeInUp" alt="Image Profuturo">
 						</div>
 
 						<div class="col-sm-12 personal">
@@ -85,7 +101,7 @@
 						</div>
 
 						<div class="image-holder col-sm-12">
-							<img src="/images/74188fe0.phone.jpg" class="img-responsive wow fadeInUp" alt="Image Profuturo mobile">
+							<img src="images/74188fe0.phone.jpg" class="img-responsive wow fadeInUp" alt="Image Profuturo mobile">
 						</div>
 
 					</div>
@@ -143,7 +159,7 @@
 							<h2 class="text-center">Designing a new customer experience</h2>
 							<p class="text-center">When it comes to envisioning Digital Transformation, User Experience plays a fundamental role. That’s why we made sure that Profuturo’s Digital Experience remained suave across the entire lifecycle. With quarterly updates, <span class="hidden-xs"> a check-up, additional funding services and emergency planning. All with one single purpose: customers’ satisfaction.</span></p>
 							<div class="image-holder sketch wow fadeInUp" data-wow-duration="1s">
-								<img src="/images/c3173c20.sketch.jpg" class="img-responsive" alt="Image Profuturo Sketch">
+								<img src="images/a31fddb4.sketch.jpg" class="img-responsive" alt="Image Profuturo Sketch">
 							</div>
 							<p class="text-center small-display">
 								Digital transformation can be a rocky road sometimes
@@ -181,6 +197,16 @@
 		<!--[if lt IE 7]>
 			<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 		<![endif]-->
+
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+			e.src='//www.google-analytics.com/analytics.js';
+			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+			ga('create','UA-XXXXX-X');ga('send','pageview');
+		</script>
 
 
 				<script src="scripts/2bffae2f.main.js"></script>
