--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,7 @@
   <div id="root"></div>
   <script src="main.bundle.js"></script>
 </body>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </html>
